--- a/Clients/C/Makefile.win
+++ b/Clients/C/Makefile.win
@@ -1,9 +1,7 @@
 
-
 # Windows version of the Makefile.
 
-
-# ipv4|ipv6
+# Set to ipv4|ipv6
 NETWORK=ipv6
 DEFINES=
 
@@ -12,15 +10,15 @@ MODE=release
 
 WINOPTS= /Ox
 
-HEADERS=include\spsc_rring.h
+HEADERS=include\ambrosia\internal\spsc_rring.h include\ambrosia\client.h include\ambrosia\internal\bits.h
+
 SRCS=src\spsc_rring.c
-OBJS=bin\$(MODE)\$(NETWORK)\spsc_rring.o bin\$(MODE)\$(NETWORK)\service.o
+OBJS=bin\$(MODE)\$(NETWORK)\spsc_rring.o bin\$(MODE)\$(NETWORK)\ambrosia_client.o
 
 COMP=cl.exe $(DEFINES) /I"include" $(WINOPTS)
 LINK=cl.exe
 
-all: win
-	@echo "Please select make win or make lin"
+all: $(OBJS)
 
 bin\$(MODE)\$(NETWORK)\spsc_rring.o: src\spsc_rring.c $(HEADERS) bin\$(MODE)\$(NETWORK)
 	$(COMP) /c src\spsc_rring.c /Fo"$@"
@@ -28,29 +26,14 @@ bin\$(MODE)\$(NETWORK)\spsc_rring.o: src\spsc_rring.c $(HEADERS) bin\$(MODE)\$(N
 bin\$(MODE)\$(NETWORK)\ambrosia_client.o: src\ambrosia_client.c $(HEADERS) bin\$(MODE)\$(NETWORK)
 	$(COMP) /c src\ambrosia_client.c /Fo"$@"
 
-# TEMP:
-bin\$(MODE)\$(NETWORK)\service.o: service.c $(HEADERS) bin\$(MODE)\$(NETWORK)
-	$(COMP) /c service.c /Fo"$@"
-
 bin\$(MODE)\$(NETWORK):
 	mkdir "bin\$(MODE)\$(NETWORK)"
 
-# Create a native windows binary (Winsock) without using MinGW/etc
-win: service_winsockv4.exe service_winsockv6.exe
-# service_winsockv4_dbg.exe
-
-service_winsockv6.exe: $(OBJS) 
-	$(LINK) $(OBJS) /Fe"$@"
-
-service_winsock.exe: $(OBJS)
-	$(LINK) $(OBJS) /Fe"$@"
-
-service_winsockv4.exe: $(HEADERS) $(SRCS)
-	$(MAKE) /F Makefile.win DEFINES="/DIPV4" NETWORK=ipv4 service_winsock.exe
-	move service_winsock.exe service_winsockv4.exe
+bin\libambrosia.dll:
+	echo "FINISHME! - Linux build complete.  Windows build incomplete."
 
 clean:
-	del /f /q service.o service_winsockv4.exe service_winsockv6.exe service_v4.exe service_v6.exe $(OBJS) 
+	del /f /q $(OBJS) 
 
-.PHONY: win clean
+.PHONY: all win clean
 
