Add functionality to HelloWorld client and get compilation/codegen working

--- a/Samples/HelloWorld/Client1/Client1.csproj
+++ b/Samples/HelloWorld/Client1/Client1.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GeneratedSourceFiles\Client1Interfaces\latest\Client1Interfaces.csproj" />
+    <ProjectReference Include="..\GeneratedSourceFiles\ServerInterfaces\latest\ServerInterfaces.csproj" />
   </ItemGroup>
 
 </Project>
