--- a/Samples/HelloWorld/GeneratedSourceFiles/ServerInterfaces/latest/ServerInterfaces.csproj
+++ b/Samples/HelloWorld/GeneratedSourceFiles/ServerInterfaces/latest/ServerInterfaces.csproj
@@ -1,12 +1,15 @@
+ <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>netcoreapp2.0</TargetFramework>
+    </PropertyGroup>
+ <ItemGroup>
 
-<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\Ambrosia\Ambrosia.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="Microsoft.NETCore.App" Version="2.0.0" />
-  </ItemGroup>
+    </ItemGroup>
+ <ItemGroup>
+     <PackageReference Include="AmbrosiaLibCS" Version="2018.11.30.1" />
+     <PackageReference Include="Mono.Options.Core" Version="1.0.0" />
+     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
+     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
+     <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
+    </ItemGroup>
 </Project>
