--- a/Samples/HelloWorld/IClient1/IClient1.csproj
+++ b/Samples/HelloWorld/IClient1/IClient1.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <AssemblyName>IClient1</AssemblyName>
+    <RootNamespace>IClient1</RootNamespace>
   </PropertyGroup>
 
 </Project>
