--- a/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPINetCore/latest/PTAmbrosiaGeneratedAPINetCore.csproj
+++ b/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPINetCore/latest/PTAmbrosiaGeneratedAPINetCore.csproj
@@ -79,6 +79,7 @@
  <ItemGroup>
      <PackageReference Include="AmbrosiaLibCS" Version="2018.11.30.1" />
      <PackageReference Include="Mono.Options.Core" Version="1.0.0" />
+     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
      <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
      <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
      <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
