WIP on bringing the native example back up in Docker

--- a/InternalImmortals/NativeService/Dockerfile
+++ b/InternalImmortals/NativeService/Dockerfile
@@ -1,10 +1,29 @@
+# This Dockerfile demonstrates how we don't need to have the
+# "ambrosia" Docker image as our *parent* in order to use AMBROSIA.
+# We can also just use it as a convenient way to grab binary releases
+# of AMBROSIA.
 FROM ambrosia
 
-RUN apt-get install -y make gcc strace nmap
-ADD . /root/NativeService
-WORKDIR /root/NativeService
+# We can use whatever we want as our parent image here:
+FROM ubuntu
+# Build dependencies for the native service:
+RUN apt-get update && \
+    apt-get install -y make gcc 
+# Ambrosia runtime dependencies, including rotatelogs:
+RUN apt-get install -y libunwind-dev libicu60 apache2-utils
 
-RUN make -f Makefile.lin service_v4.exe
+# Equivalently, we could wget and extract a tarball here:
+COPY --from=ambrosia /ambrosia/bin /ambrosia/bin
 
-# NOTE! Run with AZURE_STORAGE_CONN_STRING in the environment:
-# ENV AZURE_STORAGE_CONN_STRING 
+ADD . /ambrosia/NativeService
+WORKDIR /ambrosia/NativeService
+
+ENV AMBROSIA_BINDIR=/ambrosia/bin
+
+# This will leave the binary in the current directory:
+RUN make service_v4.exe 
+
+ENV PATH="${PATH}:/ambrosia/bin"
+
+# NOTE! Run this with AZURE_STORAGE_CONN_STRING in the environment:
+# docker run --env AZURE_STORAGE_CONN_STRING="$AZURE_STORAGE_CONN_STRING" ...
