--- a/Samples/StreamingDemo/Dashboard/Dashboard.csproj
+++ b/Samples/StreamingDemo/Dashboard/Dashboard.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFrameworks>netcoreapp2.0;net46</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Platforms>x64</Platforms>
     <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
@@ -18,6 +18,10 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Ambrosia" Version="2018.11.28.3" />
+    <PackageReference Include="AmbrosiaLibCS" Version="2018.12.6.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GeneratedSourceFiles\DashboardAPIGeneratedNet46\latest\DashboardAPIGeneratedNet46.csproj" />
+    <ProjectReference Include="..\ServiceConfiguration\ServiceConfiguration.csproj" />
   </ItemGroup>
 </Project>
