--- a/Samples/StreamingDemo/TwitterSubscription/TwitterSubscription.csproj
+++ b/Samples/StreamingDemo/TwitterSubscription/TwitterSubscription.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp2.0;net46</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Platforms>x64</Platforms>
     <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
@@ -21,6 +21,8 @@
     <PackageReference Include="System.Reactive.Linq" Version="4.1.2" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GeneratedSourceFiles\AnalyticsAPIGeneratedNet46\latest\AnalyticsAPIGeneratedNet46.csproj" />
+    <ProjectReference Include="..\ServiceConfiguration\ServiceConfiguration.csproj" />
     <ProjectReference Include="..\TwitterObservable\TwitterObservable.csproj" />
   </ItemGroup>
 </Project>
