--- a/Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj
+++ b/Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj
@@ -17,7 +17,8 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="2018.11.30.1" />
+    <PackageReference Include="AmbrosiaLibCS" Version="2018.12.06.3" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Mono.Options.Core" Version="1.0.0" />
     <PackageReference Include="System.Runtime.Serialization.Primitives">
       <Version>4.3.0</Version>
