Add a script for running full AKS test on ADO

--- a/AKS-scripts/Defs/AmbrosiaAKSConf.sh.template
+++ b/AKS-scripts/Defs/AmbrosiaAKSConf.sh.template
@@ -23,7 +23,7 @@
 AMBROSIA_SERVICE_NAME=perftest
 
 # Find this in the Azure portal or with `az account list --output table`
-AZURE_SUBSCRIPTION=********-****-****-****-************
+AZURE_SUBSCRIPTION=PASTE_SUBSCRIPTION_ID_HERE
 # Where to put resources we create:
 AZURE_LOCATION=eastus
 DOCKER_EMAIL=xyz@xyz.com
