Factor out the run-PTI stuff from build_docker_images and into its own CI script.  Call it but don't demand that it work.

--- a/InternalImmortals/PerformanceTestInterruptible/Dockerfile
+++ b/InternalImmortals/PerformanceTestInterruptible/Dockerfile
@@ -12,10 +12,8 @@ RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
 # ----------------------------------------
 
 # Publish to a local directory:
-ENV DEST=/ambrosia/InternalImmortals/PerformanceTestInterruptible/CodeGenDependencies/$AMBROSIA_DOTNET_FRAMEWORK
+ENV CGDEPS=/ambrosia/InternalImmortals/PerformanceTestInterruptible/CodeGenDependencies/$AMBROSIA_DOTNET_FRAMEWORK
 
-# Be wary: absolute paths have rather different behavior for dotnet publish:
-ENV BUILDIT="dotnet publish -o $DEST $BLDFLAGS"
 ENV PATH="${PATH}:/ambrosia/InternalImmortals/PerformanceTestInterruptible/bin"
 
 # ------------------------------------------------------------
@@ -24,20 +22,23 @@ ENV PATH="${PATH}:/ambrosia/InternalImmortals/PerformanceTestInterruptible/bin"
 # *piece-by-piece* to enable incremental rebuilds.
 ADD IJob /ambrosia/InternalImmortals/PerformanceTestInterruptible/IJob
 WORKDIR /ambrosia/InternalImmortals/PerformanceTestInterruptible
-RUN $BUILDIT IJob/IJob.csproj
+RUN dotnet publish -o $CGDEPS $BLDFLAGS IJob/IJob.csproj
 
 ADD API /ambrosia/InternalImmortals/PerformanceTestInterruptible/API
-RUN $BUILDIT API/ServerAPI.csproj
+RUN dotnet publish -o $CGDEPS $BLDFLAGS API/ServerAPI.csproj
 
 # TODO/FIXME: this should be replaced by a template which is modified by the user:
 # WARNING: as currently set up, this creates a dependency on the
 # "ambrosia-dev" rather than "ambrosia" image.
-RUN cp -f "../../Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj" $DEST/
+RUN cp -f "../../Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj" $CGDEPS/
 
 # Run the code-generation tool:
 RUN rm -rf ./GeneratedSourceFiles && \
     mkdir -p GeneratedSourceFiles 
 RUN AmbrosiaCS CodeGen -a IJob/bin/Release/netcoreapp2.0/linux-x64/IJob.dll -a API/bin/Release/netcoreapp2.0/linux-x64/ServerAPI.dll -o PTIAmbrosiaGeneratedAPINetCore -f netcoreapp2.0 -b ./CodeGenDependencies/netcoreapp2.0
+
+# Be wary: absolute paths have rather different behavior for dotnet publish.
+ENV BUILDIT="dotnet publish -o /ambrosia/InternalImmortals/PerformanceTestInterruptible/bin $BLDFLAGS"
 
 # Bulid/ppublish the RPC wrappers whose project we just created:
 RUN $BUILDIT GeneratedSourceFiles/PTIAmbrosiaGeneratedAPINetCore/latest/PTIAmbrosiaGeneratedAPINetCore.csproj
@@ -51,6 +52,8 @@ RUN $BUILDIT Server/Server.csproj
 # Add the scripts for invoking PTI inside the container:
 ADD run_*.sh            /ambrosia/InternalImmortals/PerformanceTestInterruptible/
 ADD Scripts             /ambrosia/InternalImmortals/PerformanceTestInterruptible/Scripts
+
+env PATH="$PATH:/ambrosia/InternalImmortals/PerformanceTestInterruptible/bin"
 
 # ImmortalCoordinator default port:
 EXPOSE 1500
