Script changes: set OS, and use squish mode on macos for now (needs realpath).  Change runAmbrosiaService so that the immortal coordinator lines can be tagged differently

--- a/.dockerignore
+++ b/.dockerignore
@@ -241,9 +241,6 @@ ModelManifest.xml
 # FAKE - F# Make
 .fake/
 
-# Ignore InternalImmortals, because they typically build their own Docker containers:
-InternalImmortals/
-
 #Test run logs
 /AmbrosiaTest/AmbrosiaTest/AmbrosiaLogs
 
@@ -256,3 +253,10 @@ InternalImmortals/
 .git
 Dockerfile
 build_docker_images.sh
+
+**/launchSettings.json
+CodeGenDependencies
+**/GeneratedSourceFiles/*/*/
+
+# Ignore InternalImmortals, because they typically build their own Docker containers:
+InternalImmortals/
