--- a/Samples/HelloWorld/IClient1/IClient1.csproj
+++ b/Samples/HelloWorld/IClient1/IClient1.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>IClient1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AmbrosiaLibCS" Version="2018.12.10.1" />
+  </ItemGroup>
+
 </Project>
