Native: cleanup and refactor: add upport/downport args to connect_sockets

--- a/InternalImmortals/NativeService/Dockerfile
+++ b/InternalImmortals/NativeService/Dockerfile
@@ -23,11 +23,12 @@
 
 # Oh, that's happening even on ambrosia-dev:
 FROM ambrosia-dev
+# We get build dependencies from ambrosia-dev, since it built the native library.
+# RUN apt-get update && \
+#     apt-get install -y make gcc
+# nmap
 
-RUN apt-get update && \
-    apt-get install -y make gcc nmap
-
-ADD . /ambrosia/NativeService
+ADD   . /ambrosia/NativeService
 WORKDIR /ambrosia/NativeService
 
 ENV AMBROSIA_BINDIR=/ambrosia/bin
