travis: looks like it needs a dotnet version specified.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 
 language: csharp
 mono: none
+dotnet: latest
 
 services:
   - docker
-
+  
 env:
   global:
     # Mount the logs from outside the container when/if running PerformanceTestInterruptible:
