Travis: Install apt dependencies using apt add-on

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ dotnet: 2.1
 
 services:
   - docker
+
+addons:
+  apt:
+    packages:
+    - libunwind-dev
+    - make
+    - gcc
   
 env:
   global:
