--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 
 language: csharp
 mono: none
+dotnet: 2.1
+dist: xenial
 
 services:
   - docker
 
+addons:
+  apt:
+    packages:
+    - libunwind-dev 
+    - make
+    - gcc
+  
 env:
   global:
     # Mount the logs from outside the container when/if running PerformanceTestInterruptible:
@@ -15,6 +24,9 @@ env:
     - DOCK=nodocker
     - DOCK=docker PTI_MODE=OneContainer
 #    - DOCK=docker PTI_MODE=TwoContainers
+
+before_install:
+  - sudo apt-get install -y libunwind-dev make gcc
 
 script:
 # Need to remove the dependence on Azure Tables /
