--- a/Samples/HelloWorld/GeneratedSourceFiles/ServerInterfaces/latest/ServerInterfaces.csproj
+++ b/Samples/HelloWorld/GeneratedSourceFiles/ServerInterfaces/latest/ServerInterfaces.csproj
@@ -6,7 +6,8 @@
 
     </ItemGroup>
  <ItemGroup>
-     <PackageReference Include="AmbrosiaLibCS" Version="2018.12.06.3" />
+     <PackageReference Include="AmbrosiaLibCS" Version="2018.12.10.1" />
+     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
      <PackageReference Include="Mono.Options.Core" Version="1.0.0" />
      <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
      <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
