Fix parent image for HelloWorld

--- a/Samples/HelloWorld/Dockerfile
+++ b/Samples/HelloWorld/Dockerfile
@@ -1,8 +1,8 @@
 
 # ------------------------------
-FROM ambrosia
+FROM ambrosia/ambrosia as amb
 FROM microsoft/dotnet:2.0-sdk
-COPY --from=ambrosia /ambrosia/bin /ambrosia/bin
+COPY --from=amb /ambrosia/bin /ambrosia/bin
 ENV PATH="$PATH:/ambrosia/bin"
 # ------------------------------
 
